--- a/homepage/index.html
+++ b/homepage/index.html
@@ -527,7 +527,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Rudian Borneel</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Human Resource</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -539,7 +539,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">MD Sadman Safin Oasif</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Human Resource</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -551,7 +551,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Mahamudul Hossain Jisun</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Event Management & Logistics</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -563,7 +563,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Nilonjana Mojumder</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Event Management & Logistics</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -575,7 +575,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Showmik Safi</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Event Management & Logistics</span>
                                     </div>
                                 </div>
                                 
@@ -588,7 +588,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Tamejul Habib</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Finance</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -600,7 +600,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Nafisa Islam</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Creative</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -612,7 +612,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Shreya Sangbriti</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Creative</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -624,7 +624,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Avibadhan Das</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Music)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -636,7 +636,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Lalon Mostafa</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Music)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -648,7 +648,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Rudra Mathew Gomes</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Music)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -660,7 +660,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Syed Ariful Islam Aowan</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Music)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -672,7 +672,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Rubaba Khijir Nusheen</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Dance)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -684,7 +684,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Maria Kamal Katha</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Dance)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -696,7 +696,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Diana Halder Momo</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Dance)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -708,7 +708,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Jubair Rahman</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Performance (Dance)</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -720,7 +720,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Fabiha Bushra Ali</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Public Relation</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -732,7 +732,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Md Ahnaf Farhan</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Public Relation</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -744,7 +744,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Khaled Bin Taher</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Public Relation</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -756,7 +756,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Lawrence Clifford Gomes</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Public Relation</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -768,7 +768,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
                                     <div class="member-name">
                                         <span class="name">Jareen Tasnim Bushra</span>
-                                        <span class="position">Executive Member</span>
+                                        <span class="position">Secretary of Research & Development</span>
                                     </div>
                                 </div>
                             </div>
