--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1336,8 +1336,23 @@ https://templatemo.com/tm-583-festava-live
                                 </div>
 
                                 <div class="tab-pane fade" id="nav-LoginForm" role="tabpanel" aria-labelledby="nav-LoginForm-tab">
-                                    <h5>Login Form</h5>
-                                    <!-- Add login form content here -->
+                                    <form id="login-form" class="custom-form contact-form mb-5 mb-lg-0" action="#" method="post" role="form">
+                                        <div class="contact-form-body">
+                                            <div class="row">
+                                                <div class="col-lg-12 col-12 mb-3">
+                                                    <input type="email" name="login-email" id="login-email" class="form-control" placeholder="Email Address" required>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-12 col-12 mb-3">
+                                                    <input type="password" name="login-password" id="login-password" class="form-control" placeholder="Password" required>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-10 col-8 mx-auto">
+                                                <button type="submit" class="form-control">Login</button>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
 
                                 <div class="tab-pane fade" id="nav-ContactMap" role="tabpanel" aria-labelledby="nav-ContactMap-tab">
@@ -1484,6 +1499,7 @@ https://templatemo.com/tm-583-festava-live
         <script src="js/jquery.sticky.js"></script>
         <script src="js/click-scroll.js"></script>
         <script src="js/custom.js"></script>
+        <script src="js/apps-script.js"></script>
         
         <!-- Swiper JS -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -1603,6 +1619,38 @@ https://templatemo.com/tm-583-festava-live
             .then(response => {
                 alert('Sign up successful!');
                 document.getElementById('signup-form').reset();
+            })
+            .catch(err => {
+                alert('There was an error. Please try again.');
+            });
+        });
+        </script>
+
+        <script>
+        document.getElementById('login-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+
+            const loginData = {
+                email: document.getElementById('login-email').value,
+                password: document.getElementById('login-password').value,
+                action: 'login'  // This tells the Apps Script this is a login request
+            };
+
+            fetch('https://script.google.com/macros/s/AKfycbxdUsHaXtC8jE6O-4cD4dhQPo7bbrHzsqFe_qeBCo6IXH5S5sKwoWCjkSQH9J94uec/exec', {
+                method: 'POST',
+                body: JSON.stringify(loginData),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+            .then(res => res.json())
+            .then(response => {
+                if (response.success) {
+                    alert('Logged in as ' + response.name);
+                    // You can add additional actions here like redirecting or showing user info
+                } else {
+                    alert('Invalid email or password');
+                }
             })
             .catch(err => {
                 alert('There was an error. Please try again.');
