--- a/homepage/index.html
+++ b/homepage/index.html
@@ -496,6 +496,46 @@
           }
         }
         </style>
+        <style>
+@media (max-width: 768px) {
+  .contact-form-body .form-check,
+  .contact-form-body .form-check-inline {
+    display: flex !important;
+    align-items: center !important;
+    margin-bottom: 16px !important;
+    margin-right: 0 !important;
+    width: 100%;
+    cursor: pointer;
+    position: relative;
+    padding-left: 0 !important;
+    min-height: 36px;
+  }
+  .form-check-input[type="radio"] {
+    margin-right: 10px;
+    margin-left: 0 !important;
+    width: 28px;
+    height: 28px;
+    min-width: 28px;
+    min-height: 28px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .form-check-label {
+    font-size: 1.12em;
+    flex: 1;
+    cursor: pointer;
+    user-select: none;
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    height: 28px;
+  }
+  /* Target the label for 'Current Member' radio */
+  label[for="status-current"] {
+    margin-left: 16px;
+  }
+}
+</style>
 <!--
 
 TemplateMo 583 BUCuC
@@ -510,20 +550,19 @@ https://templatemo.com/tm-583-festava-live
         <div id="mobileSidebarOverlay" class="mobile-sidebar-overlay"></div>
         <nav id="mobileSidebar" class="mobile-sidebar">
             <div class="sidebar-profile">
-                <img src="images/profile-placeholder.png" alt="Profile" class="sidebar-profile-img">
+                <img src="images/logopng.png" alt="Club Logo" class="sidebar-profile-img">
                 <div class="sidebar-profile-info">
                     <strong>BRACU Cultural Club</strong>
                     <span>Official</span>
                 </div>
             </div>
             <ul class="sidebar-nav">
-                <li><a href="#profile"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#messages"><i class="fa fa-envelope"></i> Messages</a></li>
-                <li><a href="#activity"><i class="fa fa-chart-line"></i> Activity</a></li>
-                <li><a href="#events"><i class="fa fa-calendar"></i> Events</a></li>
-                <li><a href="#reports"><i class="fa fa-file-alt"></i> Reports</a></li>
-                <li><a href="#statistics"><i class="fa fa-chart-bar"></i> Statistics</a></li>
-                <li><a href="#signout"><i class="fa fa-sign-out-alt"></i> Sign Out</a></li>
+                <li><a href="#section_1"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#section_2"><i class="fa fa-info-circle"></i> About</a></li>
+                <li><a href="#section_3"><i class="fa fa-users"></i> Panel</a></li>
+                <li><a href="#section_4"><i class="fa fa-star"></i> Sb Members</a></li>
+                <li><a href="#section_5"><i class="fa fa-calendar"></i> Schedule</a></li>
+                <li><a href="#footer"><i class="fa fa-user-plus"></i> Sign Up</a></li>
             </ul>
             <div class="sidebar-footer">
                 <a href="#friend"><i class="fa fa-share-alt"></i> Tell a Friend</a>
@@ -1655,6 +1694,7 @@ https://templatemo.com/tm-583-festava-live
                 universityId: document.getElementById('signup-id').value,
                 email: document.getElementById('signup-main-email').value,
                 gsuiteEmail: document.getElementById('signup-gsuite-email').value,
+                password: document.getElementById('signup-password').value,
                 department: document.getElementById('signup-department').value,
                 phone: document.getElementById('signup-phone').value,
                 semester: document.getElementById('signup-semester').value,
@@ -1663,10 +1703,11 @@ https://templatemo.com/tm-583-festava-live
                 facebook: document.getElementById('signup-facebook').value,
                 status: document.querySelector('input[name="membership-status"]:checked')?.value || '',
                 motivation: document.getElementById('signup-motivation').value,
-                terms: document.getElementById('signup-terms').checked ? 'Agreed' : 'Not Agreed'
+                terms: document.getElementById('signup-terms').checked ? 'Agreed' : 'Not Agreed',
+                action: 'signup' // <-- add this line
             };
 
-            fetch('https://script.google.com/macros/s/AKfycbxdUsHaXtC8jE6O-4cD4dhQPo7bbrHzsqFe_qeBCo6IXH5S5sKwoWCjkSQH9J94uec/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbxR8_BuLypFOpO9S25H7AyNXjTmIpDjCcoSghf3P-HsCTSRiUBAvvM1bcU5IaXTgL0u/exec', {
                 method: 'POST',
                 body: JSON.stringify(data),
                 headers: {
@@ -1694,7 +1735,7 @@ https://templatemo.com/tm-583-festava-live
                 action: 'login'  // This tells the Apps Script this is a login request
             };
 
-            fetch('https://script.google.com/macros/s/AKfycbxdUsHaXtC8jE6O-4cD4dhQPo7bbrHzsqFe_qeBCo6IXH5S5sKwoWCjkSQH9J94uec/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbxR8_BuLypFOpO9S25H7AyNXjTmIpDjCcoSghf3P-HsCTSRiUBAvvM1bcU5IaXTgL0u/exec', {
                 method: 'POST',
                 body: JSON.stringify(loginData),
                 headers: {
@@ -1737,41 +1778,50 @@ https://templatemo.com/tm-583-festava-live
         <style>
         @media (max-width: 768px) {
           .sidebar-toggle-btn {
-            width: 40px;
-            height: 40px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            width: 44px;
+            height: 44px;
+            top: 16px;
+            right: 16px;
             position: fixed;
-            top: 18px;
-            right: 18px;
             background: #f8f8fc;
             border: none;
             border-radius: 50%;
             box-shadow: 0 2px 8px rgba(0,0,0,0.06);
             z-index: 1200;
             cursor: pointer;
-            transition: background 0.2s, box-shadow 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
           }
           .sidebar-toggle-bar {
-            width: 18px;
-            height: 2px;
-            background: #888;
-            margin: 3px 0;
-            border-radius: 2px;
+            position: absolute;
+            left: 50%;
+            width: 24px;
+            height: 3.5px;
+            background: #555;
+            border-radius: 2.5px;
             transition: all 0.3s cubic-bezier(.4,2,.6,1);
-            position: relative;
-            display: block;
+            transform: translateX(-50%) translateY(0);
+          }
+          .sidebar-toggle-bar:nth-child(1) {
+            top: 14px;
+          }
+          .sidebar-toggle-bar:nth-child(2) {
+            top: 20px;
+          }
+          .sidebar-toggle-bar:nth-child(3) {
+            top: 26px;
           }
           .sidebar-toggle-btn.open .sidebar-toggle-bar:nth-child(1) {
-            transform: translateY(5px) rotate(45deg);
+            top: 20px;
+            transform: translateX(-50%) rotate(45deg);
           }
           .sidebar-toggle-btn.open .sidebar-toggle-bar:nth-child(2) {
             opacity: 0;
           }
           .sidebar-toggle-btn.open .sidebar-toggle-bar:nth-child(3) {
-            transform: translateY(-5px) rotate(-45deg);
+            top: 20px;
+            transform: translateX(-50%) rotate(-45deg);
           }
         }
         </style>
